SFDC Automation/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Maintenance_Contact_Type__c</fullName>
        <label>Maintenance Contact - All Branches</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Address_Last_Updated__c</fullName>
        <label>Marketing Address Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marketing_Cell_Phone__c</fullName>
        <label>Marketing Cell Phone</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_City__c</fullName>
        <label>Marketing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Country__c</fullName>
        <label>Marketing Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Fax__c</fullName>
        <label>Marketing_Fax</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Home_Phone__c</fullName>
        <label>Marketing Home Phone</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_State__c</fullName>
        <label>Marketing State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Street__c</fullName>
        <label>Marketing Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Work_Phone__c</fullName>
        <label>Marketing Work Phone</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Zip__c</fullName>
        <label>Marketing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Active__c</fullName>
        <description>To track when this contact is not active. Since we want to keep the contact to know who was where and what activity that person may have had we need to provide this options. As a picklist we have a way to provide a detail that will allow us to determine when we want to market to this contact.</description>
        <inlineHelpText>Check the reason why this contact is no longer active</inlineHelpText>
        <label>Not Active</label>
        <picklist>
            <picklistValues>
                <fullName>No Longer in This Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved to Unrelated Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ONSITE__c</fullName>
        <description>Onsite</description>
        <label>Onsite</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the orginal account id the contact belongs to in case it is moved from a child to parent in the process of making it an all branch contact.</description>
        <label>Original Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts Added As Key Contacts</relationshipLabel>
        <relationshipName>Key_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAGER__c</fullName>
        <description>Pager</description>
        <label>Pager</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Classification__c</fullName>
        <formula>BLANKVALUE(TEXT( Account.Parent.Account_Classification__c ), TEXT(Account.Account_Classification__c ))</formula>
        <label>Parent Account Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Status__c</fullName>
        <formula>BLANKVALUE(TEXT(Account.Parent.Type), TEXT(Account.Type))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Fax__c</fullName>
        <label>Personal Fax</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Contact_Role__c</fullName>
        <label>Pre-Sales Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <description>Indicates what is the language we should use to communicate to this contact</description>
        <inlineHelpText>Please enter the preferred language to communicate with this contact</inlineHelpText>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Email__c</fullName>
        <label>Previous Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Duplicate Contacts</relationshipLabel>
        <relationshipName>DuplicateContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPOUSE_NAME__c</fullName>
        <description>Spouse Name</description>
        <label>Spouse Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_ACTIVE__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Status Active</description>
        <label>Status Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Opt_Out_Reason__c</fullName>
        <label>Survey Opt Out Reason</label>
        <picklist>
            <controllingField>HasOptedOutofSurvey__c</controllingField>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only to be contacted by Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Preference__c</fullName>
        <label>Survey Preference</label>
        <picklist>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail or Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>FSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOICE_MAIL__c</fullName>
        <description>Voice Mail</description>
        <label>Voice Mail</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Valid_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Addressable Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>addr_verified_date__c</fullName>
        <label>Address Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF(OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>toEloqua_FirstPackage__c</fullName>
        <label>toEloqua FirstPackage</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>toEloqua_LastPackage__c</fullName>
        <label>toEloqua LastPackage</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>toEloqua_MaxInServiceDate__c</fullName>
        <label>toEloqua MaxInServiceDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>toEloqua_RyderBranches__c</fullName>
        <description>This field is used to displayed the Ryder Branch for given Contact</description>
        <inlineHelpText>This field is used to displayed the Ryder Branch for given Contact</inlineHelpText>
        <label>toEloqua RyderBranches</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>toEloqua_Veh_Exp_0_3__c</fullName>
        <label>toEloqua Veh Exp 0-3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>toEloqua_Veh_Exp_10_12__c</fullName>
        <label>toEloqua Veh Exp 10-12</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>toEloqua_Veh_Exp_13_18__c</fullName>
        <label>toEloqua Veh Exp 13-18</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Contacts_in_Quebec</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Preferred_Language__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.ADDRESS2_STATE</field>
            <operation>equals</operation>
            <value>,QC,ON</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS2_COUNTRY</field>
            <operation>notEqual</operation>
            <value>US</value>
        </filters>
        <label>Contacts in Quebec</label>
        <sharedTo>
            <roleAndSubordinates>DirectorofSalesEasternCanada</roleAndSubordinates>
            <roleAndSubordinates>MarketingServicesManagerCanada</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contacts_with_missing_email</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Email_Does_Not_Exist_Reason__c</columns>
        <columns>STATUS_ACTIVE__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email_Does_Not_Exist_Reason__c</field>
            <operation>equals</operation>
            <value>I will update later</value>
        </filters>
        <filters>
            <field>STATUS_ACTIVE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Data_Quality_Description__c</field>
            <operation>contains</operation>
            <value>Email</value>
        </filters>
        <label>Contacts with missing email</label>
        <sharedTo>
            <group>AllSACRoles</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>STATUS_ACTIVE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>contact_with_no_email</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>equals</operation>
        </filters>
        <label>contact_with_no_email</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Duplicate</fullName>
        <active>true</active>
        <label>Duplicate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Primary</fullName>
        <active>true</active>
        <label>Primary</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Asst_Phone_Number_Has_Ten_Digits</fullName>
        <active>true</active>
        <description>Validates that the Asst Phone number is in (999) 999-9999 format.</description>
        <errorConditionFormula>NOT(ISBLANK(AssistantPhone )) &amp;&amp; 
LEN( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( AssistantPhone , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;)) &lt;&gt;10</errorConditionFormula>
        <errorDisplayField>AssistantPhone</errorDisplayField>
        <errorMessage>Assistant phone numbers should be in this format: (999) 999-9999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Availability_Required</fullName>
        <active>true</active>
        <description>If this contact is an all branch contact please enter the availability</description>
        <errorConditionFormula>ISPICKVAL(Available_24_7__c , &quot;&quot;)
&amp;&amp; NOT($Profile.Name = &apos;System Administrator&apos;)
&amp;&amp;  ( NOT  (ISPICKVAL( CSI_Contact_Type__c , &quot;&quot;)) 
|| NOT  (ISPICKVAL(  Maintenance_Contact_Type__c  , &quot;&quot;))
|| INCLUDES( Contact_Type__c ,&quot;Billing&quot;)
)</errorConditionFormula>
        <errorDisplayField>Available_24_7__c</errorDisplayField>
        <errorMessage>If this contact is an all branch contact please enter the availability.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Availabily_From_To_Check</fullName>
        <active>true</active>
        <description>Available To should be greater than Available From</description>
        <errorConditionFormula>ISPICKVAL(Available_24_7__c, &apos;No&apos;) &amp;&amp; VALUE(SUBSTITUTE(TEXT(Available_From__c), &apos;:00&apos;, &apos;&apos;) ) &gt;= VALUE(SUBSTITUTE(TEXT(Available_To__c), &apos;:00&apos;, &apos;&apos;) )</errorConditionFormula>
        <errorMessage>Available To should be greater than Available From</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Business_Phone_Number_Has_Ten_Digits</fullName>
        <active>true</active>
        <description>Validates that the Business Phone number is in (999) 999-9999 format.</description>
        <errorConditionFormula>NOT(ISBLANK(BUSS_PHONE2__c )) &amp;&amp; 
LEN( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( BUSS_PHONE2__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;)) &lt;&gt;10</errorConditionFormula>
        <errorDisplayField>BUSS_PHONE2__c</errorDisplayField>
        <errorMessage>Business phone numbers should be in this format: (999) 999-9999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_update_account_on_keyContact</fullName>
        <active>true</active>
        <errorConditionFormula>PRIORVALUE( AccountId ) &lt;&gt; AccountId &amp;&amp;
Added_As_Key_Contact__c =true &amp;&amp; 
PRIORVALUE( Contact_Trigger_Toggle__c ) =Contact_Trigger_Toggle__c</errorConditionFormula>
        <errorMessage>This contact is added as a key contact. Account cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cell_Number_Has_Ten_Digits</fullName>
        <active>true</active>
        <description>Validates that the Cell number is in (999) 999-9999 format.</description>
        <errorConditionFormula>NOT(ISBLANK(MobilePhone )) &amp;&amp;
LEN( 
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(MobilePhone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;)) &lt;&gt;10</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile numbers should be in this format: (999) 999-9999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChildrenDescriptionCharacter</fullName>
        <active>true</active>
        <description>Validates that the Children Description is not numeric if not blank.</description>
        <errorConditionFormula>NOT(ISBLANK( CHILDREN_DESC__c )) &amp;&amp; (ISNUMBER( CHILDREN_DESC__c ))</errorConditionFormula>
        <errorDisplayField>CHILDREN_DESC__c</errorDisplayField>
        <errorMessage>Children Description can not be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CollegeCharacter</fullName>
        <active>true</active>
        <description>Validates that the College is not numeric if not blank.</description>
        <errorConditionFormula>NOT(ISBLANK( COLLEGE__c )) &amp;&amp; (ISNUMBER( COLLEGE__c ))</errorConditionFormula>
        <errorDisplayField>COLLEGE__c</errorDisplayField>
        <errorMessage>College can not be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_ID</fullName>
        <active>true</active>
        <description>Validates that the Company ID is numeric if not blank.</description>
        <errorConditionFormula>NOT(ISBLANK(  CO_ID__c  )) &amp;&amp; NOT(ISNUMBER( CO_ID__c))</errorConditionFormula>
        <errorDisplayField>CO_ID__c</errorDisplayField>
        <errorMessage>Company ID is not numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContactNickNameCharacter</fullName>
        <active>true</active>
        <description>Validates that the Contact Nick Name is not numeric if not blank</description>
        <errorConditionFormula>NOT(ISBLANK( CT_NICK_NAME__c )) &amp;&amp; (ISNUMBER(CT_NICK_NAME__c))</errorConditionFormula>
        <errorDisplayField>CT_NICK_NAME__c</errorDisplayField>
        <errorMessage>Contact Nick Name can not be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Country</fullName>
        <active>true</active>
        <description>Ensures Home Country has validation</description>
        <errorConditionFormula>AND(

NOT(CONTAINS($Setup.UVS_Profiles__c.Profile_Name__c, $Profile.Name)),

OR(LEN(MailingCountry) = 1,
NOT(
CONTAINS(
&quot;CA:US&quot;,
MailingCountry))),
MailingCountry&lt;&gt;&apos;United States&apos;,
MailingCountry&lt;&gt;&apos;The United States&apos;,
MailingCountry&lt;&gt;&apos;The United States of America&apos;,
MailingCountry&lt;&gt;&apos;Canada&apos;
)</errorConditionFormula>
        <errorDisplayField>MailingCountry</errorDisplayField>
        <errorMessage>A valid two-letter code of US or CA is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DuplicateGroupNumberNumeric</fullName>
        <active>true</active>
        <description>Validates that the Duplicate Group Number is numeric if not blank.</description>
        <errorConditionFormula>NOT(ISBLANK(  DUP_GROUP_NO__c  )) &amp;&amp; NOT(ISNUMBER(  DUP_GROUP_NO__c  ))</errorConditionFormula>
        <errorDisplayField>DUP_GROUP_NO__c</errorDisplayField>
        <errorMessage>Duplicate Group Number is not numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailRequired</fullName>
        <active>true</active>
        <description>Sees if email field is blank, and requires a value unless Email Does Not Exist Checkbox is displayed.
By pass this rule for isell contacts during import(create) only.</description>
        <errorConditionFormula>(ISBLANK( Integration_Indicator__c ) &amp;&amp; ISBLANK(Email) &amp;&amp; Email_does_not_exist__c = FALSE) || 
(NOT( ISBLANK( Integration_Indicator__c ) ) &amp;&amp; NOT(ISNEW() ) &amp;&amp; ISBLANK(Email) 
&amp;&amp; Email_does_not_exist__c = FALSE)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>You must enter an email address for your contact.  If you do not have one, you must select Email Does Not Exist</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FirstNameNonNumeric</fullName>
        <active>true</active>
        <description>Requires the first name be non-numeric</description>
        <errorConditionFormula>NOT(ISBLANK(FirstName)) &amp;&amp; OR(CONTAINS(FirstName, &quot;0&quot;), CONTAINS(FirstName, &quot;1&quot;), CONTAINS(FirstName, &quot;2&quot;), CONTAINS(FirstName, &quot;3&quot;), CONTAINS(FirstName, &quot;4&quot;), CONTAINS(FirstName, &quot;5&quot;), CONTAINS(FirstName, &quot;6&quot;), CONTAINS(FirstName, &quot;7&quot;), CONTAINS(FirstName, &quot;8&quot;), CONTAINS(FirstName, &quot;9&quot;))</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>You cannot place numbers in the First Name field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FirstNameRequired</fullName>
        <active>true</active>
        <description>Requires that the First Name be completed</description>
        <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>You must enter a value for First Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HobbiesCharacter</fullName>
        <active>true</active>
        <description>Validates that the Hobbies is not numeric if not blank.</description>
        <errorConditionFormula>NOT(ISBLANK( HOBBIES__c )) &amp;&amp; (ISNUMBER( HOBBIES__c ))</errorConditionFormula>
        <errorDisplayField>HOBBIES__c</errorDisplayField>
        <errorMessage>Hobbies can not be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HomeAddressIDNumeric</fullName>
        <active>true</active>
        <description>Validates that the Home Address ID is numeric if not blank.</description>
        <errorConditionFormula>NOT(ISBLANK(  HOME_ADD_ID__c )) &amp;&amp; NOT(ISNUMBER(  HOME_ADD_ID__c  ))</errorConditionFormula>
        <errorDisplayField>HOME_ADD_ID__c</errorDisplayField>
        <errorMessage>Home Address ID is not numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HomeAddressRequired</fullName>
        <active>false</active>
        <description>Requires a Home Address be entered</description>
        <errorConditionFormula>OR( ISBLANK( MailingCity ), ISBLANK( MailingCountry ), ISBLANK(MailingPostalCode), ISBLANK( MailingState ), ISBLANK(MailingStreet)) &amp;&amp; NOT( $Profile.Name = &quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>The Home Address is required.  Please enter all fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Home_Phone_Number_Has_Ten_Digits</fullName>
        <active>true</active>
        <description>Validates that the Home Phone number is in (999) 999-9999 format.</description>
        <errorConditionFormula>NOT(ISBLANK(HomePhone )) &amp;&amp; 
LEN( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( HomePhone , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;)) &lt;&gt;10</errorConditionFormula>
        <errorDisplayField>HomePhone</errorDisplayField>
        <errorMessage>Home phone numbers should be in this format: (999) 999-9999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Inactive_contact_cannot_be_a_key_contact</fullName>
        <active>true</active>
        <description>inactivated by neelima on 11/19/2012. Activate after fixing the key contact logic.</description>
        <errorConditionFormula>ISCHANGED(STATUS_ACTIVE__c)  &amp;&amp;   STATUS_ACTIVE__c =false &amp;&amp; Added_As_Key_Contact__c =true</errorConditionFormula>
        <errorMessage>An inactive contact cannot be a key contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LastNameNonNumeric</fullName>
        <active>true</active>
        <description>Requires the first name be non-numeric</description>
        <errorConditionFormula>NOT(ISBLANK(LastName)) &amp;&amp; OR(CONTAINS(LastName, &quot;0&quot;), CONTAINS(LastName, &quot;1&quot;), CONTAINS(LastName, &quot;2&quot;), CONTAINS(LastName, &quot;3&quot;), CONTAINS(LastName, &quot;4&quot;), CONTAINS(LastName, &quot;5&quot;), CONTAINS(LastName, &quot;6&quot;), CONTAINS(LastName, &quot;7&quot;), CONTAINS(LastName, &quot;8&quot;), CONTAINS(LastName, &quot;9&quot;))</errorConditionFormula>
        <errorDisplayField>LastName</errorDisplayField>
        <errorMessage>You cannot place numbers in the Last Name field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LocationIDNumeric</fullName>
        <active>true</active>
        <description>Validates that the Location ID is numeric if not blank.</description>
        <errorConditionFormula>NOT(ISBLANK(  LOC_ID__c )) &amp;&amp; NOT(ISNUMBER( LOC_ID__c ))</errorConditionFormula>
        <errorDisplayField>LOC_ID__c</errorDisplayField>
        <errorMessage>Location ID is not numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_Number_Has_Ten_Digits</fullName>
        <active>false</active>
        <description>Validates that the Mobile number is in (999) 999-9999 format.</description>
        <errorConditionFormula>LEN( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( MobilePhone , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;)) &lt;&gt;10</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile numbers should be in this format: (999) 999-9999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Phone_Number_Has_Ten_Digits</fullName>
        <active>true</active>
        <description>Validates that the Other Phone number is in (999) 999-9999 format</description>
        <errorConditionFormula>NOT(ISBLANK(OtherPhone )) &amp;&amp; 
LEN( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( OtherPhone , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;)) &lt;&gt;10</errorConditionFormula>
        <errorDisplayField>OtherPhone</errorDisplayField>
        <errorMessage>Other phone numbers should be in this format: (999) 999-9999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pager_Number_Has_Ten_Digits</fullName>
        <active>true</active>
        <description>Validates that the Pager number is in (999) 999-9999 format.</description>
        <errorConditionFormula>NOT(ISBLANK(PAGER__c )) &amp;&amp; 
LEN( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( PAGER__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;)) &lt;&gt;10</errorConditionFormula>
        <errorDisplayField>PAGER__c</errorDisplayField>
        <errorMessage>Pager numbers should be in this format: (999) 999-9999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number_Has_Ten_Digits</fullName>
        <active>true</active>
        <description>Validates that the Phone number is in (999) 999-9999 format.</description>
        <errorConditionFormula>NOT(ISBLANK(Phone )) &amp;&amp; 
LEN( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( Phone , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;),&quot;+1&quot;,&quot;&quot;)) &lt;&gt;10 &amp;&amp;  OR( Marketing_Country__c= &apos;US&apos;, Marketing_Country__c= &apos;CA&apos;)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone numbers should be in this format: (999) 999-9999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SpouseNameCharacter</fullName>
        <active>true</active>
        <description>Validates that the Spouse Name is not numeric if not blank.</description>
        <errorConditionFormula>NOT(ISBLANK( SPOUSE_NAME__c )) &amp;&amp; (ISNUMBER( SPOUSE_NAME__c ))</errorConditionFormula>
        <errorDisplayField>SPOUSE_NAME__c</errorDisplayField>
        <errorMessage>Spouse Name can not be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Voicemail_Number_Has_Ten_Digits</fullName>
        <active>true</active>
        <description>Validates that the Voicemail number is in (999) 999-9999 format.</description>
        <errorConditionFormula>NOT(ISBLANK(VOICE_MAIL__c )) &amp;&amp; 
LEN( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( VOICE_MAIL__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;)) &lt;&gt;10</errorConditionFormula>
        <errorDisplayField>VOICE_MAIL__c</errorDisplayField>
        <errorMessage>Voicemail numbers should be in this format: (999) 999-9999.</errorMessage>
    </validationRules>
</CustomObject>